Add comprehensive project documentation with PDF generation
- Added 8 detailed documentation chapters:
  * 01-05: High-level overview (refactoring, architecture, stateful, userspace, flows)
  * 06: Detailed packet flows with Mermaid diagrams (HTTP, FTP, SSH)
  * 07: State machine deep dive (TCP/UDP states, GUESS states)
  * 08: NAT flow analysis (SNAT, Masquerade, DNAT verification)

- Automated documentation build system:
  * Makefile for generating CONSOLIDATED_REPORT.md
  * Automatic chapter concatenation
  * PDF generation with Pandoc + LaTeX (xelatex for Unicode support)
  * Optional Mermaid diagram rendering via mermaid-filter

- Documentation guides:
  * MASTER.md: Table of contents and usage instructions
  * README-doc.txt: Maintenance and build instructions
  * MERMAID_SETUP.txt: Guide for rendering diagrams in PDF

All documentation is maintained in doc/ directory for easy PDF export.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -44,8 +44,20 @@ pdf: $(REPORT)
 		fi; \
 		if [ -n "$$ENGINE" ]; then \
 			echo "Using PDF engine: $$ENGINE"; \
+			FILTER_ARG=""; \
+			if command -v mmdc >/dev/null 2>&1; then \
+				echo "Mermaid CLI found - diagrams will be rendered"; \
+				FILTER_ARG="--filter mermaid-filter"; \
+			elif command -v mermaid-filter >/dev/null 2>&1; then \
+				echo "Mermaid filter found - diagrams will be rendered"; \
+				FILTER_ARG="--filter mermaid-filter"; \
+			else \
+				echo "WARNING: mermaid-filter not found - diagrams will show as code"; \
+				echo "To render diagrams, install: npm install -g @mermaid-js/mermaid-cli mermaid-filter"; \
+			fi; \
 			pandoc $(REPORT) -o $(PDF) \
 				--pdf-engine=$$ENGINE \
+				$$FILTER_ARG \
 				--toc \
 				--toc-depth=3 \
 				-V geometry:margin=1in \
