Expand documentation with deep technical analysis and Developer API guide
- Enriched Chapter 6 (Packet Flows) with kernel call stacks and core logic snippets.
- Enriched Chapter 7 (State Machine) with TCP transition tables and timer aggregation logic.
- Enriched Chapter 8 (NAT Analysis) with manip_skb details and checksum manipulation specifics.
- Added Chapter 9 (Developer API Guide) for internal kernel interfaces and Netlink protocols.
- Updated MASTER index and Makefile automation for full coverage.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -9,7 +9,8 @@ CHAPTERS = 01_Refactoring_Optimization.md \
            05_Packet_Flow_Walkthroughs.md \
            06_Detailed_Packet_Flows.md \
            07_State_Machine_Deep_Dive.md \
-           08_NAT_Flow_Analysis.md
+           08_NAT_Flow_Analysis.md \
+           09_Developer_API_Guide.md
 
 all: $(REPORT)
 
